# oas/python-flask-server/jatdb_server/models/__init__.py
@@ -3,6 +3,7 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from jatdb_server.models.content_file import ContentFile
 from jatdb_server.models.trello_action import TrelloAction
 from jatdb_server.models.trello_query import TrelloQuery
 from jatdb_server.models.universal_resource import UniversalResource
