# oas/python-flask-server/jatdb_server/swagger/swagger.yaml
@@ -1,20 +1,19 @@
 ---
 swagger: "2.0"
 info:
-  description: "This is an API I am designing for myself using swagger.\nYou can find\
-    \  out more about Swagger at [http://swagger.io](http://swagger.io)\n"
-  version: "0.0.1"
-  title: "NGenetzky's API"
+  description: "JSON API to DB: Fetch JSON from APIs and send to a TinyDB database."
+  version: "0.0.2"
+  title: "jatdb"
   contact:
     email: "Nathan@Genetzky.us"
   license:
     name: "MIT"
-    url: "https://opensource.org/licenses/MIT"
-host: "0.0.0.0"
-basePath: "/v0"
+    url: "https://github.com/NGenetzky/jatdb/blob/master/LICENSE"
 tags:
 - name: "trello"
   description: "Interact with Trello"
+- name: "content"
+  description: "Interact with Markdown Content"
 schemes:
 - "https"
 - "http"
@@ -38,6 +37,60 @@ paths:
           schema:
             $ref: "#/definitions/UniversalResource"
       x-swagger-router-controller: "jatdb_server..default_controller"
+  /content/:
+    get:
+      tags:
+      - "content"
+      operationId: "content_get"
+      parameters:
+      - name: "path"
+        in: "query"
+        description: "Relative path to file"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Successfully created"
+          schema:
+            $ref: "#/definitions/ContentFile"
+      x-swagger-router-controller: "jatdb_server..content_controller"
+    post:
+      tags:
+      - "content"
+      operationId: "content_post"
+      parameters:
+      - in: "body"
+        name: "contentfile"
+        required: true
+        schema:
+          $ref: "#/definitions/ContentFile"
+      responses:
+        200:
+          description: "Successfully created"
+          schema:
+            $ref: "#/definitions/UniversalResource"
+      x-swagger-router-controller: "jatdb_server..content_controller"
+    put:
+      tags:
+      - "content"
+      operationId: "content_put"
+      parameters:
+      - name: "path"
+        in: "query"
+        description: "Relative path to file"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "contentfile"
+        required: true
+        schema:
+          $ref: "#/definitions/ContentFile"
+      responses:
+        200:
+          description: "Successfully created"
+          schema:
+            $ref: "#/definitions/UniversalResource"
+      x-swagger-router-controller: "jatdb_server..content_controller"
   /trello/:
     post:
       tags:
@@ -59,7 +112,7 @@ paths:
           $ref: "#/definitions/TrelloQuery"
       responses:
         200:
-          description: "Returns the index of the querry."
+          description: "Returns the index of the query."
           schema:
             type: "integer"
       x-swagger-router-controller: "jatdb_server..trello_controller"
@@ -104,6 +157,27 @@ paths:
             $ref: "#/definitions/UniversalResource"
       x-swagger-router-controller: "jatdb_server..trello_controller"
 definitions:
+  ContentFile:
+    type: "object"
+    required:
+    - "content"
+    properties:
+      content:
+        type: "string"
+        description: "Actual markdown content"
+      path:
+        type: "string"
+        description: "Relative path to file"
+      metadata:
+        type: "object"
+        description: "Data associated with content"
+        properties: {}
+    example:
+      content: "Some meaningful markdown\n\n[google](https://www.google.com/)"
+      path: "post/2018-10-31-happy-birthday.md"
+      metadata:
+        date: "2018-10-31"
+        title: "Happy Birthday"
   TrelloQuery:
     type: "object"
     properties:
@@ -165,5 +239,5 @@ definitions:
       uri: "http://example.com/aeiou"
       uuid: "046b6c7f-0b8a-43b9-b35d-6489e6daee91"
 externalDocs:
-  description: "Feel free to look at the source code for this api."
-  url: "https://github.com/NGenetzky/ngenetzky-api/"
+  description: "github.com/NGenetzky/jatdb/"
+  url: "https://github.com/NGenetzky/jatdb/"
